src-ken&y/objects/Work_Order__c.object
<CustomObject>
    <customHelpPage>HelpWorkOrder</customHelpPage>
    <description>All work orders including planned orders from MRP as well as unplanned orders.</description>
    <fields>
        <fullName>Assembly_Item_Specification_Costing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Input holder for Costing Item Specifications on the Assembly Cost Rollup page</description>
        <inlineHelpText>Assembly Item Specification (Costing)</inlineHelpText>
        <label>Assembly (Costing)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND (3 OR (4 AND 5)) AND 6</booleanFilter>
            <filterItems>
                <field>Item_Specification__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>Item_Specification__c.Costing__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Item_Specification__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Facility__c</valueField>
            </filterItems>
            <filterItems>
                <field>Item_Specification__c.Facility__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.Facility__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Item_Specification__c.Type__c</field>
                <operation>equals</operation>
                <value>Assembly</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Item_Specification__c</referenceTo>
        <relationshipLabel>Work Orders (Assembly Item Specification (Costing))</relationshipLabel>
        <relationshipName>Work_Orders_Costing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assembly_Item_Specification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assembly Item Specification</description>
        <label>Assembly Item Specification</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND (3 OR (4 AND 5))) AND (6 OR (7 AND 8))</booleanFilter>
            <filterItems>
                <field>Item_Specification__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <filterItems>
                <field>Item_Specification__c.Production__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Item_Specification__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Facility__c</valueField>
            </filterItems>
            <filterItems>
                <field>Item_Specification__c.Facility__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.Facility__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Item_Specification__c.Type__c</field>
                <operation>equals</operation>
                <valueField>$Source.Type__c</valueField>
            </filterItems>
            <filterItems>
                <field>Item_Specification__c.Type__c</field>
                <operation>equals</operation>
                <value>Assembly</value>
            </filterItems>
            <filterItems>
                <field>$Source.Type__c</field>
                <operation>notEqual</operation>
                <value>Repair</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Item_Specification__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assembly_Revision__c</fullName>
        <description>Assembly Item Specification&apos;s Revision</description>
        <formula>Assembly_Item_Specification__r.Revision__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The current revision ID for the assembly item. To manage the revision, go to the Item Specification page.</inlineHelpText>
        <label>Assembly Revision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assembly_Stocking_UOM__c</fullName>
        <formula>Assembly_Item_Specification__r.Item__r.Stocking_UOM__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assembly Stocking UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>Close Date for the work order.</description>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company this Work Order belongs to</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complete_to_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Location</description>
        <label>Complete to Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Facility__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Work Orders (Complete to Location)</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <description>Quantity For Component Issue</description>
        <label>Completed</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contents__c</fullName>
        <label>Contents</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to currency</description>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Work Order Currency</relationshipLabel>
        <relationshipName>Work_Order_Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Completed2__c</fullName>
        <description>The date this work order was completed.</description>
        <label>Date Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>DEPRECATED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_WIP_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default WIP Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Facility__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Work Orders (Default WIP Location)</relationshipLabel>
        <relationshipName>Work_Orders_WIP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Earliest_Completion_Date2__c</fullName>
        <description>The scheduled date for completion; if this is a planned work order, the MRP need date should be the same as the scheduled dat</description>
        <inlineHelpText>The scheduled date for completion. For planned work orders, the MRP need date should be the same as the scheduled date.</inlineHelpText>
        <label>Earliest Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Earliest_Completion_Date__c</fullName>
        <description>The scheduled date for completion; if this is a planned work order, the MRP need date should be the same as the scheduled dat</description>
        <inlineHelpText>The scheduled date for completion. For planned work orders, the MRP need date should be the same as the scheduled date.</inlineHelpText>
        <label>DEPRECATED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <label>Exceptions Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The facility in which the work order will be processed.</description>
        <label>Facility</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Facility__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Workorders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finalized_Date__c</fullName>
        <description>Finalized Date is the date when the document is finalized.</description>
        <label>Finalized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ready for generating accounting entries</description>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finalized_hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DO NOT PUT on page layout, it is hidden field to control user click.</description>
        <label>Finalized Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Contents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Contents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Item</description>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Date__c</fullName>
        <description>This date-time field is used to reflect when this work order was last synced from the purchase order for the subcontracting flow to prevent manual edits to the work order.</description>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MRB_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Location</description>
        <label>MRB Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Facility__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Work Orders (MRB Location)</relationshipLabel>
        <relationshipName>Work_Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MRP_Demand__c</fullName>
        <description>MRP Demand is set from the MRP Demand for work orders created by MRP</description>
        <inlineHelpText>The demand for work orders as calculated by MRP.</inlineHelpText>
        <label>MRP Demand</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRP_Plan__c</fullName>
        <description>This is the auto number generated by the MRP and on the MRP plan reports;  used to reference which demand this work order is fullfilling</description>
        <inlineHelpText>This number, generated by MRP, references the demand that the selected work order is fulfilling.</inlineHelpText>
        <label>MRP Plan</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to specify when a record is ready to be merged into a PDF document</description>
        <label>Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_Date2__c</fullName>
        <description>If this is a planned work order, the date is generated by the MRP Plan; if this is unplanned, the date you enter as the scheduled date will also be the need date</description>
        <inlineHelpText>For planned work orders, the date is generated by MRP. For unplanned orders, the need date is the same as the scheduled date; it must be on or after the earliest completion date.</inlineHelpText>
        <label>Need Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Need_Date__c</fullName>
        <description>If this is a planned work order, the date is generated by the MRP Plan; if this is unplanned, the date you enter as the scheduled date will also be the need date</description>
        <inlineHelpText>For planned work orders, the date is generated by MRP. For unplanned orders, the need date is the same as the scheduled date; it must be on or after the earliest completion date.</inlineHelpText>
        <label>DEPRECATED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes related to this work order</description>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Operations__c</fullName>
        <label>Number of Operations</label>
        <summaryForeignKey>Operation_Tracking__c.Work_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_Quantity_Stocking_UOM__c</fullName>
        <description>Order Quantity in Stocking UOM</description>
        <label>Order Quantity (Stocking UOM)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Quantity__c</fullName>
        <description>If this is a planned work order, the order quantity will be generated from the MRP Plan; if this is unplanned, enter the order quantity</description>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packaging_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packaging UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <formula>Quantity_Complete__c / Order_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Complete__c</fullName>
        <description>Quantity completed</description>
        <label>Quantity Complete</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Complete_Stocking_UOM__c</fullName>
        <label>Quantity Complete (Stocking UOM)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Scrapped__c</fullName>
        <description>Quantity scrapped</description>
        <label>Quantity Scrapped</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Scrapped_Stocking_UOM__c</fullName>
        <label>Quantity Scrapped (Stocking UOM)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_to_Complete_Stocking_UOM__c</fullName>
        <formula>IF(
            ( Order_Quantity_Stocking_UOM__c   - ( Quantity_Complete_Stocking_UOM__c  +  Quantity_Scrapped_Stocking_UOM__c )) &gt; 0,
            (Order_Quantity_Stocking_UOM__c  - (Quantity_Complete_Stocking_UOM__c + Quantity_Scrapped_Stocking_UOM__c)),
            0
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity to Complete (Stocking UOM)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_to_Complete__c</fullName>
        <description>Quantity to complete equals order quantity  minus quantity complete minus quantity scrapped</description>
        <formula>IF(
            (Order_Quantity__c  - (Quantity_Complete__c + Quantity_Scrapped__c)) &gt; 0,
            (Order_Quantity__c  - (Quantity_Complete__c + Quantity_Scrapped__c)),
            0
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The quantity to complete is equal to the order quantity minus the total quantity completed and scrapped.</inlineHelpText>
        <label>Quantity to Complete</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Value_Holder__c</fullName>
        <description>Holds the quantity values in the respective UOM entered during the work order creation</description>
        <label>Quantity Value Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reason Code</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Reason code must be of type Work Order</errorMessage>
            <filterItems>
                <field>Reason_Code__c.Type__c</field>
                <operation>equals</operation>
                <value>Work Order</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Reason_Code__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receipt_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt Line</label>
        <referenceTo>Receipt_Line__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <description>The release date of the work order.</description>
        <label>Release Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rework_Reason__c</fullName>
        <description>Reason for the rework</description>
        <label>Rework Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering Change</fullName>
                </value>
                <value>
                    <fullName>Problem found in Inspection</fullName>
                </value>
                <value>
                    <fullName>Customer Modification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scrapped__c</fullName>
        <description>Quantity Scrapped - not stored</description>
        <label>Scrapped</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated in the build to order flow to auto allocate the shipment line</description>
        <label>Shipment Line</label>
        <referenceTo>Shipment_Line__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date2__c</fullName>
        <description>Start date for this work order</description>
        <inlineHelpText>The start date for the work order must be prior to both the earliest completion date and the need date.</inlineHelpText>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date for this work order</description>
        <inlineHelpText>The start date for the work order must be prior to both the earliest completion date and the need date.</inlineHelpText>
        <label>DEPRECATED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Indicates the status of this work order: Draft, In Process, Complete, Rework, Cancelled</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Number_of_Lines__c</fullName>
        <label>Total Number of Lines</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <description>Transaction Currency  for this record.</description>
        <formula>Company__r.Default_Transaction_Currency__r.Name</formula>
        <label>Transaction Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Date of the transaction, this could be populated from any source using a workflow depending on customer need.</description>
        <inlineHelpText>Date of the transaction. Using a workflow, this field can be automatically populated with a date from any source document.</inlineHelpText>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Work Order type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uncompleted__c</fullName>
        <description>This field is used to enter the quantity that needs to be uncompleted on a work order.</description>
        <label>Uncompleted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Work Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Facility__c</columns>
        <columns>NAME</columns>
        <columns>Assembly_Item_Specification__c</columns>
        <columns>Assembly_Revision__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Order_Quantity__c</columns>
        <columns>Quantity_Scrapped__c</columns>
        <columns>Quantity_Complete__c</columns>
        <columns>Quantity_to_Complete__c</columns>
        <columns>Earliest_Completion_Date2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_except_MRP</fullName>
        <columns>NAME</columns>
        <columns>Assembly_Item_Specification__c</columns>
        <columns>Assembly_Revision__c</columns>
        <columns>Order_Quantity__c</columns>
        <columns>Quantity_Complete__c</columns>
        <columns>Quantity_Scrapped__c</columns>
        <columns>Quantity_to_Complete__c</columns>
        <columns>Status__c</columns>
        <columns>Need_Date2__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Current planned work orders</label>
    </listViews>
    <listViews>
        <fullName>All_released</fullName>
        <columns>Company__c</columns>
        <columns>NAME</columns>
        <columns>Assembly_Item_Specification__c</columns>
        <columns>Status__c</columns>
        <columns>Need_Date2__c</columns>
        <columns>Earliest_Completion_Date2__c</columns>
        <columns>Order_Quantity__c</columns>
        <columns>Quantity_Complete__c</columns>
        <columns>Quantity_Scrapped__c</columns>
        <columns>Quantity_to_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </filters>
        <label>All Released Work Orders</label>
    </listViews>
    <nameField>
        <label>Work Order</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Closed_Check</fullName>
        <active>true</active>
        <description>If status is closed you cannot edit any fields</description>
        <errorConditionFormula>ISPICKVAL( PRIORVALUE(Status__c), &apos;Closed&apos;)
            &amp;&amp; NOT(ISCHANGED(Status__c))</errorConditionFormula>
        <errorMessage>Work Order is Not Open. No Changes are allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Company_must_not_change</fullName>
        <active>true</active>
        <description>after creating a WO for a given company, do not allow the WO to change to another company</description>
        <errorConditionFormula>ISCHANGED(Company__c)</errorConditionFormula>
        <errorMessage>Once created for a Company, the WO must not change Company field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Currency_must_match_company_currency</fullName>
        <active>true</active>
        <description>Currency must match company currency</description>
        <errorConditionFormula>Currency__c != Company__r.Default_Transaction_Currency__c</errorConditionFormula>
        <errorDisplayField>Currency__c</errorDisplayField>
        <errorMessage>Currency must match company&apos;s default transaction currency</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Item_Required_For_Repair_WO</fullName>
        <active>true</active>
        <description>Item or Item specification is required for repair work orders</description>
        <errorConditionFormula>AND(ISPICKVAL(Type__c,&quot;Repair&quot;),Assembly_Item_Specification__c = null, Item__c = null)</errorConditionFormula>
        <errorDisplayField>Item__c</errorDisplayField>
        <errorMessage>Item or Item specification is required for repair work orders</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Item_Spec_Required_For_Regular_WO</fullName>
        <active>true</active>
        <description>Assembly Item Specification is required for regular work orders</description>
        <errorConditionFormula>AND(ISPICKVAL(Type__c,&quot;Regular&quot;),Assembly_Item_Specification__c = null)</errorConditionFormula>
        <errorDisplayField>Assembly_Item_Specification__c</errorDisplayField>
        <errorMessage>Assembly Item Specification is required for regular work orders</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Order_Quantity__c )  &amp;&amp;  Order_Quantity__c &lt; Quantity_Complete__c + Quantity_Scrapped__c</errorConditionFormula>
        <errorDisplayField>Order_Quantity__c</errorDisplayField>
        <errorMessage>Order Quantity cannot be less than Quantity Completed plus Quantity Scrapped</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_Quantity_cannot_be_zero_or_less</fullName>
        <active>false</active>
        <errorConditionFormula>false</errorConditionFormula>
        <errorDisplayField>Order_Quantity__c</errorDisplayField>
        <errorMessage>Order Quantity cannot be zero or negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_vs_Item_Spec_Effective_Date</fullName>
        <active>true</active>
        <description>The Start Date must be on or after the selected Assembly Item Specification Effective Date</description>
        <errorConditionFormula>Assembly_Item_Specification__r.Start_Date2__c &gt; Start_Date2__c</errorConditionFormula>
        <errorDisplayField>Start_Date2__c</errorDisplayField>
        <errorMessage>The Start Date must be after the selected Assembly Item Specification Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Earliest_Date_Check2</fullName>
        <active>true</active>
        <description>Start date cannot be after earliset completion date</description>
        <errorConditionFormula>Start_Date2__c &gt;  Earliest_Completion_Date2__c</errorConditionFormula>
        <errorDisplayField>Start_Date2__c</errorDisplayField>
        <errorMessage>Start date cannot be after earliset completion date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Need_Date_Check</fullName>
        <active>true</active>
        <description>Start date cannot be after need date</description>
        <errorConditionFormula>Start_Date2__c &gt; Need_Date2__c</errorConditionFormula>
        <errorDisplayField>Start_Date2__c</errorDisplayField>
        <errorMessage>Start date cannot be after need date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SubContract_WO_item_spec_validation</fullName>
        <active>false</active>
        <description>If the Work order is of type SubContract then the Item Specification should not have By Product components.</description>
        <errorConditionFormula>ISPICKVAL( Type__c , &apos;SubContract&apos;)  &amp;&amp; Assembly_Item_Specification__r.By_Product_Components__c  &lt;&gt; 0</errorConditionFormula>
        <errorMessage>The assembly item specification should have no by-product components.</errorMessage>
    </validationRules>
</CustomObject>